# MonitoreoLinux

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  metrics  prometheus.yml
.github/actions/building/: action.yml
.github/actions/documentation/: action.yml
include/: config.h  expose_metrics.h  metrics.h
lib/: .gitkeep
src/: Makefile  config.c  expose_metrics.c  main.c  metrics  metrics.c
